Recipe testing best practices
Use this link to re-run the recipe: https://app.moderne.io/builder/yy9jRCj5h?organizationId=ODYzMDQ2N2QtNTZjOS00YTM2LWE0NTUtMTg4NzNjMjgyZTE4

Co-authored-by: Moderne <team@moderne.io>