@@ -26,8 +26,6 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 class ParserTest implements RewriteTest {
 
     @Issue("https://github.com/openrewrite/rewrite/pull/4914")
@@ -38,6 +36,6 @@ class ParserTest implements RewriteTest {
         @SuppressWarnings("SimplifyStreamApiCallChains") List<SourceFile> ignore = JavaParser.fromJavaVersion()
           .build()
           .parse(new String(Files.readAllBytes(targetFile)))
-          .collect(toList());
+          .toList();
     }
 }
